@@ -392,9 +392,8 @@ system with all existing implementations such as `zope.formlib` and
   ...         self.context = context
   ...         self.request = request
 
-By defining the "template" property as a "RegisteredPageTemplate" a lookup for
-a registered template is done when it is called. Also notice that it is no
-longer necessary to derive the view from BaseView!
+By defining the "template" property as a "getPageTemplate" a lookup for
+a registered template is done when it is called.
 
   >>> simple = UseOfViewTemplate(root, request)
   >>> print simple.template()
@@ -402,7 +401,7 @@ longer necessary to derive the view from BaseView!
 
 Because the demo template was registered for any ("None") interface we see the
 demo template when rendering our new view. We register a new template
-especially for the new view. Also not that the "macroTemplate" has been
+especially for the new view. Also note that the "macroTemplate" has been
 created earlier in this test.
 
   >>> factory = TemplateFactory(contentTemplate, 'text/html')
@@ -410,6 +409,48 @@ created earlier in this test.
   ...     (IUseOfViewTemplate, IDefaultBrowserLayer), IPageTemplate)
   >>> print simple.template()
   <div>demo content</div>
+
+
+Context-specific templates
+--------------------------
+
+The ``TemplateFactory`` can be also used for (view, request, context)
+lookup. It's useful when you want to override a template for specific
+content object or type.
+
+Let's define a sample content type and instantiate a view for it.
+
+  >>> class IContent(zope.interface.Interface):
+  ...     pass
+  >>> class Content(object):
+  ...     zope.interface.implements(IContent)
+
+  >>> content = Content()
+  >>> view = UseOfViewTemplate(content, request)
+
+Now, let's provide a (view, request, context) adapter using TemplateFactory.
+
+  >>> contextTemplate = os.path.join(temp_dir, 'context.pt')
+  >>> open(contextTemplate, 'w').write('<div>context-specific</div>')
+  >>> factory = TemplateFactory(contextTemplate, 'text/html')
+
+  >>> component.provideAdapter(factory,
+  ...     (IUseOfViewTemplate, IDefaultBrowserLayer, IContent),
+  ...     interfaces.IContentTemplate)
+
+First. Let's try to simply get it as a multi-adapter.
+
+  >>> template = zope.component.getMultiAdapter((view, request, content),
+  ...                 interfaces.IContentTemplate)
+  >>> print template(view)
+  <div>context-specific</div>
+
+The ``getPageTemplate`` and friends will try to lookup a context-specific
+template before doing more generic (view, request) lookup, so our view
+should already use our context-specific template:
+
+  >>> print view.template()
+  <div>context-specific</div>
 
 
 Use case ``template by interface``
